--- a/pom.xml
+++ b/pom.xml
@@ -118,11 +118,11 @@
 
         <!-- Import the JAX-RS API, we use provided scope as the API is included 
         in JBoss AS 7 -->
-        <dependency>
+        <!--<dependency>
             <groupId>org.jboss.spec.javax.ws.rs</groupId>
             <artifactId>jboss-jaxrs-api_1.1_spec</artifactId>
             <scope>provided</scope>
-        </dependency>
+        </dependency>-->
 
         <!-- Import the JPA API, we use provided scope as the API is included 
         in JBoss AS 7 -->
@@ -388,7 +388,7 @@
         <dependency>
             <groupId>org.primefaces.extensions</groupId>
             <artifactId>primefaces-extensions</artifactId>
-            <version>0.6.1</version>
+            <version>0.7.0</version>
         </dependency>
 
         <dependency>  
