--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
     <display-name>SgsSalud</display-name>
-    <context-param>
+    <!--<context-param>
         <param-name>primefaces.skin</param-name>
         <param-value>cupertino</param-value>
-    </context-param>
+    </context-param>-->
+    
+    <context-param>  
+        <param-name>primefaces.THEME</param-name>  
+        <param-value>bootstrap</param-value>  
+    </context-param> 
+    
     <context-param>
         <param-name>javax.faces.DEFAULT_SUFFIX</param-name>
         <param-value>.xhtml</param-value>
@@ -124,6 +130,8 @@
             <param-value>com.webservice.RESTService</param-value>
         </init-param>
     </servlet>
+    
+    
     <persistence-context-ref>
         <description>Convertidor genérico que combierte cualquier objeto a string y viceversa
         </description>
