cambios terminados a todo el proyecto 3.0

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -130,7 +130,24 @@
             <param-value>com.webservice.RESTService</param-value>
         </init-param>
     </servlet>
-    
+    <!--Filtro para subir imagenes-->
+    <filter>
+        <filter-name>PrimeFaces FileUpload Filter</filter-name>
+        <filter-class>org.primefaces.webapp.filter.FileUploadFilter</filter-class>
+        <init-param>
+            <param-name>thresholdSize</param-name>
+            <param-value>512000</param-value>                
+        </init-param>
+        <init-param>
+            <param-name>uploadDirectory</param-name>
+            <param-value>/home/cesar/Documentos/Descargas</param-value>                
+        </init-param>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>PrimeFaces FileUpload Filter</filter-name>
+        <servlet-name>Faces Servlet</servlet-name>
+    </filter-mapping>
     
     <persistence-context-ref>
         <description>Convertidor genérico que combierte cualquier objeto a string y viceversa
