--- a/pom.xml
+++ b/pom.xml
@@ -233,6 +233,20 @@
             <scope>compile</scope>
         </dependency>    
         
+        <!--Inicio librerias para subir imagenes-->
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.2.2</version>
+        </dependency>
+ 
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.2</version>
+        </dependency>
+        <!--Fin librerias para subir imagenes-->
+        
         <!-- Annotation processor to generate the JPA 2.0 metamodel classes 
         for typesafe criteria queries -->
         <dependency>
