--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -143,15 +143,20 @@
             <param-name>thresholdSize</param-name>
             <param-value>512000</param-value>                
         </init-param>
-        <init-param>
+        <!--<init-param>
             <param-name>uploadDirectory</param-name>
             <param-value>/home/cesar/Documentos/Descargas</param-value>                
-        </init-param>
+        </init-param>-->
     </filter>
+    <!--<context-param>
+            <param-name>primefaces.UPLOADER</param-name>
+            <param-value>auto</param-value>          
+    </context-param>-->
 
     <filter-mapping>
         <filter-name>PrimeFaces FileUpload Filter</filter-name>
         <servlet-name>Faces Servlet</servlet-name>
+        <dispatcher>FORWARD</dispatcher>
     </filter-mapping>
     
     <persistence-context-ref>
