--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
         <seam.mail.version>3.1.1.Final</seam.mail.version>
         <seam-reports-version>3.1.0.Final</seam-reports-version>  
         <primefaces.theme.version>1.0.10</primefaces.theme.version>
-        
+        <netbeans.hint.deploy.server>JBoss4</netbeans.hint.deploy.server>
     </properties>
 
 
