--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,12 @@
     <name>Sgssalud software</name>
     <description>Software clinico de gestion de servicios de salud</description>
 
+    <issueManagement>
+        <system>JIRA</system>
+        <url>http://jira.jboss.com/jira/browse/KEYCLOAK</url>
+    </issueManagement>
+
+
     <properties>
         <!-- Explicitly declaring the source encoding eliminates the following 
         message: -->
@@ -42,6 +48,7 @@
         <seam-reports-version>3.1.0.Final</seam-reports-version>  
         <primefaces.theme.version>1.0.10</primefaces.theme.version>
         <netbeans.hint.deploy.server>JBoss4</netbeans.hint.deploy.server>
+        
     </properties>
 
 
@@ -420,13 +427,39 @@
             <artifactId>commons-beanutils</artifactId>
             <version>1.8.3</version>
         </dependency>
-            
+        <dependency>
+            <groupId>org.picketlink</groupId>
+            <artifactId>picketlink-idm-impl</artifactId>
+            <version>2.6.0.CR1</version>
+        </dependency>            
+                    
+        <!--
         <dependency>
             <groupId>org.picketlink.idm</groupId>
             <artifactId>picketlink-idm-core</artifactId>
             <version>1.5.0.Alpha02</version>
         </dependency>
-        
+        <dependency>
+            <groupId>org.picketlink</groupId>
+            <artifactId>picketlink-common</artifactId>
+            <version>2.5.0.Beta6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.picketlink</groupId>
+            <artifactId>picketlink-idm-api</artifactId>
+            <version>2.5.0.Beta6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.picketlink</groupId>
+            <artifactId>picketlink-idm-impl</artifactId>
+            <version>2.5.0.Beta6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.picketlink</groupId>
+            <artifactId>picketlink-idm-simple-schema</artifactId>
+            <version>2.5.0.Beta6</version>
+        </dependency>-->
+
         <!-- JSF dependencies -->
         <dependency>
             <groupId>org.primefaces.extensions</groupId>
@@ -437,7 +470,7 @@
         <dependency>  
             <groupId>org.primefaces</groupId>  
             <artifactId>primefaces</artifactId>  
-           <version>${primefaces.version}</version>
+            <version>${primefaces.version}</version>
         </dependency> 
         
         <dependency>  
@@ -492,25 +525,11 @@
             <version>${seam.mail.version}</version>
             <scope>compile</scope>
         </dependency>
-
-        <dependency>
-            <groupId>org.jboss.seam.mail</groupId>
-            <artifactId>seam-mail-api</artifactId>
-            <scope>compile</scope>
-            <version>${seam.mail.version}</version>
+        <!--<dependency>
+            <groupId>org.apache.santuario</groupId>
+            <artifactId>xmlsec</artifactId>
+            <version>1.5.6</version>
         </dependency>
-        <dependency>
-            <groupId>org.apache.velocity</groupId>
-            <artifactId>velocity</artifactId>
-        </dependency>
-        <!--
-        <dependency>
-            <groupId>org.jboss.seam.reports</groupId>
-            <artifactId>seam-reports-api</artifactId>
-            <version>${seam-reports-version}</version>
-            <scope>compile</scope>
-        </dependency>
-        
         <dependency>
             <groupId>org.jboss.seam.reports</groupId>
             <artifactId>seam-reports-jasper</artifactId>  
@@ -522,8 +541,19 @@
                     <artifactId>dom4j</artifactId>  
                 </exclusion>  
             </exclusions>  
-        </dependency>-->
-        
+        </dependency>
+        -->            
+        <dependency>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.seam.reports</groupId>
+            <artifactId>seam-reports-api</artifactId>
+            <version>${seam-reports-version}</version>
+            <scope>compile</scope>
+        </dependency>      
+                
         <dependency>
             <groupId>net.sf.jasperreports</groupId>
             <artifactId>jasperreports</artifactId>
@@ -693,6 +723,11 @@
                         <enabled>false</enabled>
                         <updatePolicy>never</updatePolicy>
                     </snapshots>
+                </repository>
+                <repository>
+                    <id>jboss-releases-repository</id>
+                    <name>JBoss Releases Repository</name>
+                    <url>https://repository.jboss.org/nexus/service/local/staging/deploy/maven2/</url>
                 </repository>
                 <repository>  
                     <id>prime-repo</id>  
